# llmfit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  REPLICATION_PLAYBOOK.md  SECURITY.md  compose.yaml  flake.nix  index.html  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  release.yml
deploy/: site.compose.yml  site.nginx.conf
docs/: DEPLOYMENT.md
llmfit-core/: Cargo.toml
llmfit-desktop/: Cargo.toml
llmfit-desktop/capabilities/: default.json
llmfit-tui/: Cargo.toml
scripts/: check_content_llm.py  deploy-site.sh  generate_site_content.py  publish_site_content.sh  refresh_and_publish_site.sh  update_models.sh  verify_models.py
site/: app.js  content-manifest.json  feed.xml  index.html  robots.txt  sitemap.xml  styles.css
site/api/: index.html
site/compare/: index.html
site/docs/: index.html
site/faq/: index.html
site/insights/: index.html
site/insights/chat-models-for-64gb-ram-and-24gb-vram/: index.html
site/insights/coding-models-for-32gb-ram-and-12gb-vram/: index.html
site/insights/coding-models-for-32gb-ram-and-16gb-vram/: index.html
site/insights/coding-models-for-64gb-ram-and-24gb-vram/: index.html
site/insights/deepseek-local-deployment-guide/: index.html
site/insights/families/: index.html
site/insights/gemma-local-deployment-guide/: index.html
site/insights/hardware/: index.html
site/insights/mlx-for-apple-silicon-local-ai-planning/: index.html
site/insights/ollama-model-selection-for-laptops/: index.html
site/insights/reasoning-models-for-32gb-ram-and-16gb-vram/: index.html
site/insights/reasoning-models-for-64gb-ram-and-24gb-vram/: index.html
site/insights/runtimes/: index.html
site/self-host/: index.html
site/use-cases/: index.html
site/zh/: feed.xml  index.html
site/zh/api/: index.html
site/zh/compare/: index.html
site/zh/docs/: index.html
site/zh/faq/: index.html
site/zh/insights/: index.html
site/zh/insights/chat-models-for-64gb-ram-and-24gb-vram/: index.html
site/zh/insights/coding-models-for-32gb-ram-and-12gb-vram/: index.html
site/zh/insights/coding-models-for-32gb-ram-and-16gb-vram/: index.html
site/zh/insights/families/: index.html
site/zh/self-host/: index.html
site/zh/use-cases/: index.html
(+9 files in other folders)
