[package]
name = "llmfit-core"
version.workspace = true
edition = "2024"
authors = ["Alex Jones", "miounet11 contributors"]
description = "Core library for llmfit — hardware detection, model fitting, and provider integration"
license = "MIT"
repository = "https://github.com/miounet11/llmfit"
homepage = "https://github.com/miounet11/llmfit"
readme = "../README.md"
keywords = ["llm", "hardware", "inference", "models", "gpu"]
categories = ["hardware-support"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38"
ureq = { version = "3.2", features = ["json"] }
