[package]
name = "llmfit-desktop"
version.workspace = true
edition = "2024"
authors = ["Alex Jones", "miounet11 contributors"]
description = "macOS desktop application for llmfit — visual LLM hardware fitting"
license = "MIT"
repository = "https://github.com/miounet11/llmfit"
default-run = "llmfit-desktop"

[[bin]]
name = "llmfit-desktop"
path = "src/main.rs"

[dependencies]
llmfit-core = { path = "../llmfit-core" }
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
