[package]
name = "llmfit"
version.workspace = true
edition = "2024"
authors = ["Alex Jones", "miounet11 contributors"]
description = "Right-size LLM models to your system hardware. Interactive TUI and CLI to match models against available RAM, CPU, and GPU."
license = "MIT"
repository = "https://github.com/miounet11/llmfit"
homepage = "https://github.com/miounet11/llmfit"
readme = "../README.md"
keywords = ["llm", "tui", "hardware", "inference", "models"]
categories = ["command-line-utilities"]

[[bin]]
name = "llmfit"
path = "src/main.rs"

[dependencies]
llmfit-core = { path = "../llmfit-core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20"
colored = "3.1"
ratatui = "0.30"
crossterm = "0.29"
axum = "0.8"
tokio = { version = "1.50", features = ["rt-multi-thread", "signal", "net"] }
